--- a/style.css
+++ b/style.css
@@ -427,3 +427,11 @@ input[type="number"]{
 #endBallsPanel button{
   width: 100%;
 }
+
+input:disabled{
+  background: #e5e7eb;          /* 薄いグレー */
+  color: #6b7280;               /* 文字もグレー */
+  border-color: #cbd5e1;
+  cursor: not-allowed;
+  opacity: 0.9;
+}
